--- a/public/css/src/components/callout.less
+++ b/public/css/src/components/callout.less
@@ -45,12 +45,6 @@
         ul > li:before {
             background-color: #231f20 !important;
         }
-
-        a[href*='/reference/'] {
-            &:after {
-                color: #231f20 !important;
-            }
-        }
     }
 
     &--tip {
@@ -67,12 +61,6 @@
         
         ul > li:before {
             background-color: #45a485 !important;
-        }
-
-        a[href*='/reference/'] {
-            &:after {
-                color: #45a485 !important;
-            }
         }
     }
 
@@ -91,12 +79,6 @@
         ul > li:before {
             background-color: #e85a20 !important;
         }
-
-        a[href*='/reference/'] {
-            &:after {
-                color: #e85a20 !important;
-            }
-        }
     }
 
     &--note {
@@ -114,12 +96,6 @@
         ul > li:before {
             background-color: #894da7 !important;
         }
-
-        a[href*='/reference/'] {
-            &:after {
-                color: #894da7 !important;
-            }
-        }
     }
 
     &--info {
@@ -136,12 +112,6 @@
 
         ul > li:before {
             background-color: #5160c0 !important;
-        }
-
-        a[href*='/reference/'] {
-            &:after {
-                color: #5160c0 !important;
-            }
         }
     }
 
